# gallery

./: .env  .gitignore  pyproject.toml
db/: 02-create-tables.sql  persistence.py
deploy/: gallery-uwsgi.ini  launch.sh  readme.md
gallery/: app.py
gallery/db/: 01-create-schema.sql  02-create-tables.sql  persistence.py
gallery/ingestion/: cli.py  ingest.py
gallery/static/bootstrap-5.1.3-dist/css/: bootstrap-utilities.rtl.css:Zone.Identifier
gallery/static/css/: style.css
gallery/static/js/: browse.js
gallery/templates/: browse.html  details.html  page_template.html
gallery/views/: browse.py  details.py
ingestion/: cli.py  ingest.py
test/: conftest.py  test_dummy.py  test_gallery_details.py  test_persistence.py
